POST salle
